--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './normalize.scss';
+@import './public/font/stylesheet.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #191b25;
+}
+#root {
+  height: 100vh;
+  max-height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 
 code {
