--- a/src/component/shared/Header/Header.scss
+++ b/src/component/shared/Header/Header.scss
@@ -33,6 +33,22 @@
     &:last-of-type {
       margin-right: 0;
     }
+
+    &--active {
+      color: #da4f4f;
+      position: relative;
+
+      &::after {
+        content: '';
+        background: #da4f4f;
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 0;
+        left: calc(50% - 3px);
+      }
+    }
   }
 
   @media screen and (max-width: 1024px) {
