--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,27 @@
 .app {
   display: flex;
   flex-direction: column;
-  padding: 40px 156px 0;
+  padding: 80px 156px 127px;
   height: 100vh;
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
 
   @media screen and (max-width: 1600px) {
-    padding: 40px 120px 0;
+    padding: 80px 120px 127px;
   }
   @media screen and (max-width: 1024px) {
-    padding: 40px 80px 0;
+    padding: 80px 80px 127px;
+  }
+  @media screen and (max-width: 940px) {
+    padding: 80px 80px 154px;
   }
   @media screen and (max-width: 600px) {
-    padding: 25px 27px 0;
+    padding: 25px 27px 139px;
   }
+}
+
+.test-container {
+  width: 100%;
+  height: 1000px;
 }
