--- a/src/component/shared/Footer/Footer.scss
+++ b/src/component/shared/Footer/Footer.scss
@@ -4,7 +4,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 55px;
+
+  position: fixed;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
+  padding: 40px 156px 55px;
+  z-index: 10;
+
+  @media screen and (max-width: 1600px) {
+    padding: 40px 120px 55px;
+  }
+  @media screen and (max-width: 1024px) {
+    padding: 40px 80px 50px;
+  }
+  @media screen and (max-width: 600px) {
+    padding: 25px 27px 55px;
+  }
 
   &__icons {
     display: flex;
@@ -34,9 +54,6 @@
     @include fontText(normal, 400, 18px, 22px);
 
     color: #52597a;
-  }
-  @media screen and (max-width: 1024px) {
-    padding-bottom: 50px;
   }
 
   @media screen and (max-width: 940px) {
