--- a/src/component/shared/Header/Header.scss
+++ b/src/component/shared/Header/Header.scss
@@ -2,9 +2,33 @@
 
 .header {
   display: flex;
-  width: 100%;
   justify-content: space-between;
-  position: relative;
+  // position: relative;
+
+  position: fixed;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
+  padding: 40px 156px 0;
+  z-index: 10;
+
+  &--black {
+    background: #191b25;
+  }
+
+  @media screen and (max-width: 1600px) {
+    padding: 40px 120px 0;
+  }
+  @media screen and (max-width: 1024px) {
+    padding: 40px 80px 0;
+  }
+  @media screen and (max-width: 600px) {
+    padding: 25px 27px 0;
+  }
 
   &__menu {
     display: none;
@@ -60,21 +84,41 @@
       &--mobile {
         display: flex;
       }
+      background: #191b25;
 
       position: absolute;
       width: 100%;
       height: calc(100vh - 82px);
-      border: 1px solid blue;
-      top: 42px;
+      top: 82px;
       left: 0;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+
+      padding-top: 5vh;
     }
 
     &__link {
       margin-right: 0;
-      @include fontText(normal, 300, 48px, 135px);
+      @include fontText(normal, 300, 48px, 59px);
+      margin-bottom: 76px;
+      &::after {
+        display: none;
+      }
+    }
+  }
+  @media screen and (max-width: 600px) {
+    &__menu {
+      display: block;
+    }
+    &__nav {
+      top: 65px;
+    }
+
+    &__link {
+      margin-right: 0;
+      @include fontText(normal, 300, 32px, 39px);
+      margin-bottom: 56px;
       //   margin-bottom: 76px;
       //   &:last-of-type {
       //     margin-bottom: 0;
