--- a/src/public/font/stylesheet.css
+++ b/src/public/font/stylesheet.css
@@ -1,108 +1,251 @@
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-ExtraBold.eot');
-    src: local('Commissioner ExtraBold'), local('Commissioner-ExtraBold'),
-        url('Commissioner-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-ExtraBold.woff2') format('woff2'),
-        url('Commissioner-ExtraBold.woff') format('woff'),
-        url('Commissioner-ExtraBold.ttf') format('truetype');
-    font-weight: 800;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-ExtraBold.eot');
+  src: local('Commissioner ExtraBold'), local('Commissioner-ExtraBold'),
+    url('Commissioner-ExtraBold.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-ExtraBold.woff2') format('woff2'),
+    url('Commissioner-ExtraBold.woff') format('woff'),
+    url('Commissioner-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-Light.eot');
-    src: local('Commissioner Light'), local('Commissioner-Light'),
-        url('Commissioner-Light.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-Light.woff2') format('woff2'),
-        url('Commissioner-Light.woff') format('woff'),
-        url('Commissioner-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-Light.eot');
+  src: local('Commissioner Light'), local('Commissioner-Light'),
+    url('Commissioner-Light.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-Light.woff2') format('woff2'),
+    url('Commissioner-Light.woff') format('woff'),
+    url('Commissioner-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-Bold.eot');
-    src: local('Commissioner Bold'), local('Commissioner-Bold'),
-        url('Commissioner-Bold.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-Bold.woff2') format('woff2'),
-        url('Commissioner-Bold.woff') format('woff'),
-        url('Commissioner-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-Bold.eot');
+  src: local('Commissioner Bold'), local('Commissioner-Bold'),
+    url('Commissioner-Bold.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-Bold.woff2') format('woff2'),
+    url('Commissioner-Bold.woff') format('woff'),
+    url('Commissioner-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-Medium.eot');
-    src: local('Commissioner Medium'), local('Commissioner-Medium'),
-        url('Commissioner-Medium.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-Medium.woff2') format('woff2'),
-        url('Commissioner-Medium.woff') format('woff'),
-        url('Commissioner-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-Medium.eot');
+  src: local('Commissioner Medium'), local('Commissioner-Medium'),
+    url('Commissioner-Medium.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-Medium.woff2') format('woff2'),
+    url('Commissioner-Medium.woff') format('woff'),
+    url('Commissioner-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-ExtraLight.eot');
-    src: local('Commissioner ExtraLight'), local('Commissioner-ExtraLight'),
-        url('Commissioner-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-ExtraLight.woff2') format('woff2'),
-        url('Commissioner-ExtraLight.woff') format('woff'),
-        url('Commissioner-ExtraLight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-ExtraLight.eot');
+  src: local('Commissioner ExtraLight'), local('Commissioner-ExtraLight'),
+    url('Commissioner-ExtraLight.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-ExtraLight.woff2') format('woff2'),
+    url('Commissioner-ExtraLight.woff') format('woff'),
+    url('Commissioner-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-Black.eot');
-    src: local('Commissioner Black'), local('Commissioner-Black'),
-        url('Commissioner-Black.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-Black.woff2') format('woff2'),
-        url('Commissioner-Black.woff') format('woff'),
-        url('Commissioner-Black.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-Black.eot');
+  src: local('Commissioner Black'), local('Commissioner-Black'),
+    url('Commissioner-Black.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-Black.woff2') format('woff2'),
+    url('Commissioner-Black.woff') format('woff'),
+    url('Commissioner-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-Regular.eot');
-    src: local('Commissioner Regular'), local('Commissioner-Regular'),
-        url('Commissioner-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-Regular.woff2') format('woff2'),
-        url('Commissioner-Regular.woff') format('woff'),
-        url('Commissioner-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-Regular.eot');
+  src: local('Commissioner Regular'), local('Commissioner-Regular'),
+    url('Commissioner-Regular.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-Regular.woff2') format('woff2'),
+    url('Commissioner-Regular.woff') format('woff'),
+    url('Commissioner-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-SemiBold.eot');
-    src: local('Commissioner SemiBold'), local('Commissioner-SemiBold'),
-        url('Commissioner-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-SemiBold.woff2') format('woff2'),
-        url('Commissioner-SemiBold.woff') format('woff'),
-        url('Commissioner-SemiBold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-SemiBold.eot');
+  src: local('Commissioner SemiBold'), local('Commissioner-SemiBold'),
+    url('Commissioner-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-SemiBold.woff2') format('woff2'),
+    url('Commissioner-SemiBold.woff') format('woff'),
+    url('Commissioner-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Commissioner';
-    src: url('Commissioner-Thin.eot');
-    src: local('Commissioner Thin'), local('Commissioner-Thin'),
-        url('Commissioner-Thin.eot?#iefix') format('embedded-opentype'),
-        url('Commissioner-Thin.woff2') format('woff2'),
-        url('Commissioner-Thin.woff') format('woff'),
-        url('Commissioner-Thin.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
+  font-family: 'Commissioner';
+  src: url('Commissioner-Thin.eot');
+  src: local('Commissioner Thin'), local('Commissioner-Thin'),
+    url('Commissioner-Thin.eot?#iefix') format('embedded-opentype'),
+    url('Commissioner-Thin.woff2') format('woff2'),
+    url('Commissioner-Thin.woff') format('woff'),
+    url('Commissioner-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Light.eot');
+  src: local('Cera Pro Light'), local('CeraPro-Light'),
+    url('CeraPro-Light.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-Light.woff2') format('woff2'),
+    url('CeraPro-Light.woff') format('woff'),
+    url('CeraPro-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-MediumItalic.eot');
+  src: local('Cera Pro Medium Italic'), local('CeraPro-MediumItalic'),
+    url('CeraPro-MediumItalic.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-MediumItalic.woff2') format('woff2'),
+    url('CeraPro-MediumItalic.woff') format('woff'),
+    url('CeraPro-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-RegularItalic.eot');
+  src: local('Cera Pro Regular Italic'), local('CeraPro-RegularItalic'),
+    url('CeraPro-RegularItalic.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-RegularItalic.woff2') format('woff2'),
+    url('CeraPro-RegularItalic.woff') format('woff'),
+    url('CeraPro-RegularItalic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-BlackItalic.eot');
+  src: local('Cera Pro Black Italic'), local('CeraPro-BlackItalic'),
+    url('CeraPro-BlackItalic.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-BlackItalic.woff2') format('woff2'),
+    url('CeraPro-BlackItalic.woff') format('woff'),
+    url('CeraPro-BlackItalic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Medium.eot');
+  src: local('Cera Pro Medium'), local('CeraPro-Medium'),
+    url('CeraPro-Medium.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-Medium.woff2') format('woff2'),
+    url('CeraPro-Medium.woff') format('woff'),
+    url('CeraPro-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-BoldItalic.eot');
+  src: local('Cera Pro Bold Italic'), local('CeraPro-BoldItalic'),
+    url('CeraPro-BoldItalic.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-BoldItalic.woff2') format('woff2'),
+    url('CeraPro-BoldItalic.woff') format('woff'),
+    url('CeraPro-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-ThinItalic.eot');
+  src: local('Cera Pro Thin Italic'), local('CeraPro-ThinItalic'),
+    url('CeraPro-ThinItalic.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-ThinItalic.woff2') format('woff2'),
+    url('CeraPro-ThinItalic.woff') format('woff'),
+    url('CeraPro-ThinItalic.ttf') format('truetype');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-LightItalic.eot');
+  src: local('Cera Pro Light Italic'), local('CeraPro-LightItalic'),
+    url('CeraPro-LightItalic.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-LightItalic.woff2') format('woff2'),
+    url('CeraPro-LightItalic.woff') format('woff'),
+    url('CeraPro-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Black.eot');
+  src: local('Cera Pro Black'), local('CeraPro-Black'),
+    url('CeraPro-Black.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-Black.woff2') format('woff2'),
+    url('CeraPro-Black.woff') format('woff'),
+    url('CeraPro-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Bold.eot');
+  src: local('Cera Pro Bold'), local('CeraPro-Bold'),
+    url('CeraPro-Bold.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-Bold.woff2') format('woff2'),
+    url('CeraPro-Bold.woff') format('woff'),
+    url('CeraPro-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Regular.eot');
+  src: local('Cera Pro Regular'), local('CeraPro-Regular'),
+    url('CeraPro-Regular.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-Regular.woff2') format('woff2'),
+    url('CeraPro-Regular.woff') format('woff'),
+    url('CeraPro-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Thin.eot');
+  src: local('Cera Pro Thin'), local('CeraPro-Thin'),
+    url('CeraPro-Thin.eot?#iefix') format('embedded-opentype'),
+    url('CeraPro-Thin.woff2') format('woff2'),
+    url('CeraPro-Thin.woff') format('woff'),
+    url('CeraPro-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
