--- a/src/App.scss
+++ b/src/App.scss
@@ -2,15 +2,13 @@
   display: flex;
   flex-direction: column;
   padding: 80px 156px 127px;
-  height: 100vh;
+  // height: 100%;
+  // min-height: 100vh;
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
 
   @media screen and (max-width: 1600px) {
-    padding: 80px 120px 127px;
-  }
-  @media screen and (max-width: 1024px) {
     padding: 80px 80px 127px;
   }
   @media screen and (max-width: 940px) {
