--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@ body {
   background: #191b25;
 }
 #root {
-  height: 100vh;
-  max-height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   overflow: hidden;
 }
