--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 80px 156px 127px;
-  // height: 100%;
-  // min-height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
