--- a/src/component/SongsPage/modules/AudioContainer.scss
+++ b/src/component/SongsPage/modules/AudioContainer.scss
@@ -5,6 +5,14 @@
   width: 100%;
   margin-bottom: 100px;
 
+  @media screen and (min-width: 1040px) and (max-height: 900px) {
+    margin-bottom: 30px;
+  }
+
+  @media screen and (max-width: 600px) {
+    margin-bottom: 60px;
+  }
+
   &__canvas {
     width: 100%;
     height: 164px;
@@ -44,6 +52,12 @@
   &__buttons-container {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+      justify-content: center;
+      margin-top: 40px;
+    }
   }
 
   &__button {
@@ -79,6 +93,22 @@
 
     margin-left: 24px;
     color: #52597a;
+
+    &--mobile {
+      display: none;
+    }
+
+    @media screen and (max-width: 1024px) {
+      display: none;
+
+      &--mobile {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin: 0;
+        margin-top: 22px;
+      }
+    }
   }
 
   &__range {
@@ -104,6 +134,10 @@
   &__volume-container {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
   }
 
   // &__playOrPause {
