feat: попап информации

--- a/src/component/SongsPage/SongsPage.scss
+++ b/src/component/SongsPage/SongsPage.scss
@@ -196,7 +196,7 @@
   &__icon-container {
     display: flex;
 
-    img {
+    a {
       width: 32px;
       height: 32px;
       margin-right: 50px;
