--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #191b25;
 }
-#root {
+.root {
   height: 100%;
   min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+.root--100 {
+  height: 100vh;
+  max-height: 100vh;
   width: 100%;
   overflow: hidden;
 }
