--- a/src/App.scss
+++ b/src/App.scss
@@ -12,10 +12,16 @@
     padding: 80px 80px 127px;
   }
   @media screen and (max-width: 940px) {
-    padding: 80px 80px 154px;
+    padding: 80px 60px 154px;
   }
   @media screen and (max-width: 600px) {
     padding: 25px 27px 139px;
+  }
+}
+
+.app--songs {
+  @media screen and (max-width: 1600px) and (min-width: 1040px) and (max-height: 800px) {
+    padding: 80px 80px 70px;
   }
 }
 
@@ -23,3 +29,48 @@
   width: 100%;
   height: 1000px;
 }
+
+a {
+  &:active,
+  &:hover,
+  &:focus {
+    outline: 0;
+    outline-offset: 0;
+  }
+  -webkit-tap-highlight-color: transparent;
+}
+img {
+  &:active,
+  &:hover,
+  &:focus {
+    outline: 0;
+    outline-offset: 0;
+  }
+  -webkit-tap-highlight-color: transparent;
+}
+
+button {
+  &:active,
+  &:hover,
+  &:focus {
+    outline: 0;
+    outline-offset: 0;
+  }
+  -webkit-tap-highlight-color: transparent;
+}
+li {
+  &:active,
+  &:hover,
+  &:focus {
+    outline: 0;
+    outline-offset: 0;
+  }
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* &:active,
+      &:hover,
+      &:focus {
+        outline: 0;
+        outline-offset: 0;
+      } */
