--- a/src/component/PoemsPage/PoemsPage.scss
+++ b/src/component/PoemsPage/PoemsPage.scss
@@ -108,7 +108,7 @@
   &__list {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     //margin-top: 20vh;
     height: 408px;
     @include scroll();
@@ -146,14 +146,44 @@
     text-align: left;
     margin-left: 70px;
     padding-top: 36.5px;
+    cursor: pointer;
+    position: relative;
+    //border: 1px solid red;
     &--active {
       color: #da4f4f;
+
+      &::after {
+        content: '';
+        display: block;
+        width: 3px;
+        height: 100%;
+        background: #da4f4f;
+
+        position: absolute;
+        left: -70px;
+        top: 0;
+      }
     }
     @media screen and (max-width: 1440px) {
       height: 100px;
       padding-top: 32px;
       margin-left: 30px;
       @include fontText(normal, 300, 36px, 36px);
+      &--active {
+        color: #da4f4f;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 3px;
+          height: 100%;
+          background: #da4f4f;
+
+          position: absolute;
+          left: -30px;
+          top: 0;
+        }
+      }
     }
     @media screen and (max-width: 1024px) {
       text-align: center;
@@ -356,6 +386,7 @@
     }
 
     &--first {
+      margin-right: 15px;
       svg {
         margin-right: 27.5px;
         margin-left: 0;
