--- a/src/component/SongsPage/SongsPage.scss
+++ b/src/component/SongsPage/SongsPage.scss
@@ -19,7 +19,7 @@
 }
 
 .songs-page {
-  border: 1px solid red;
+  //border: 1px solid red;
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -27,6 +27,14 @@
   height: max-content;
   margin: auto 0;
   padding: 40px 0;
+
+  &__link {
+    text-decoration: underline;
+    white-space: nowrap;
+  }
+  @media screen and (max-width: 1600px) and (min-width: 1040px) and (max-height: 800px) {
+    padding: 20px 0;
+  }
 
   @media screen and (max-width: 1024px) {
     display: flex;
@@ -56,7 +64,7 @@
   }
 
   &__list {
-    overflow-y: scroll;
+    //overflow-y: scroll;
     height: 450px;
     flex-shrink: 0;
 
@@ -76,13 +84,14 @@
         width: 100%;
         display: block;
         height: auto;
+        overflow: hidden;
         overflow-y: auto;
       }
     }
   }
 
   &__song-name {
-    @include fontText(normal, 300, 48px, 59px);
+    @include fontText(normal, 300, 38px, 59px);
     color: #7c83a1;
 
     @media screen and (max-width: 1440px) {
@@ -106,12 +115,13 @@
 
   &__li {
     // border: 1px solid blue;
-    height: 150px;
+    height: 120px;
     margin-left: 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
+    position: relative;
 
     &--active {
       .songs-page__song-name {
@@ -121,16 +131,60 @@
       .songs-page__song-date {
         color: #da4f4f;
       }
+
+      &::after {
+        content: '';
+        display: block;
+        width: 3px;
+        height: 100%;
+        background: #da4f4f;
+
+        position: absolute;
+        left: -70px;
+        top: 0;
+      }
+    }
+
+    &--disabled {
+      opacity: 0.3;
+      pointer-events: none;
     }
 
     @media screen and (max-width: 1440px) {
       height: 100px;
       margin-left: 30px;
+
+      &--active {
+        &::after {
+          content: '';
+          display: block;
+          width: 3px;
+          height: 100%;
+          background: #da4f4f;
+
+          position: absolute;
+          left: -30px;
+          top: 0;
+        }
+      }
     }
     @media screen and (max-width: 1024px) {
       margin: 0;
       height: auto;
       margin-bottom: 40px;
+      &--active {
+        &::after {
+          content: '';
+          display: block;
+          width: 3px;
+          height: 100%;
+          background: #da4f4f;
+
+          position: absolute;
+          left: -30px;
+          top: 0;
+        }
+      }
     }
   }
 
@@ -155,6 +209,7 @@
   }
   &__audio-info-container {
     display: flex;
+    flex-direction: column;
 
     @media screen and (max-width: 1024px) {
       flex-direction: column;
@@ -170,26 +225,56 @@
   }
 
   &__audio-field {
+    display: flex;
+    margin-bottom: 8px;
+    @media screen and (max-width: 1024px) {
+      flex-direction: column;
+    }
+  }
+
+  &__audio-title {
     @include fontText(normal, 400, 18px, 22px);
 
     color: #52597a;
+    flex-shrink: 0;
+    width: 265px;
 
     @media screen and (max-width: 1024px) {
       @include fontText(normal, 300, 24px, 36px);
       text-align: center;
       margin-bottom: 8px;
+      width: 100%;
+    }
+    @media screen and (max-width: 600px) {
+      @include fontText(normal, 300, 21px, 120%);
+      text-align: center;
+      margin-bottom: 8px;
+      width: 100%;
     }
   }
   &__audio-value {
     @include fontText(normal, 400, 18px, 22px);
-
+    margin-left: 10px;
     color: #7c83a1;
+
+    span {
+      white-space: nowrap;
+    }
 
     @media screen and (max-width: 1024px) {
       @include fontText(normal, 300, 24px, 36px);
       display: block;
       text-align: center;
       margin-bottom: 40px;
+    }
+    @media screen and (max-width: 600px) {
+      @include fontText(normal, 300, 21px, 120%);
+      display: block;
+      text-align: center;
+      margin-bottom: 40px;
+      span {
+        display: inline-block;
+      }
     }
   }
 
@@ -364,5 +449,9 @@
       #191b25 100%
     );
     z-index: 2;
+
+    @media screen and (max-width: 1600px) and (min-width: 1040px) and (max-height: 800px) {
+      height: 100px;
+    }
   }
 }
