--- a/src/component/SongsPage/modules/AudioContainer.scss
+++ b/src/component/SongsPage/modules/AudioContainer.scss
@@ -6,18 +6,32 @@
   margin-bottom: 100px;
 
   @media screen and (min-width: 1040px) and (max-height: 900px) {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
   }
 
   @media screen and (max-width: 600px) {
     margin-bottom: 60px;
   }
 
+  &__canvas-container {
+    position: relative;
+  }
+
   &__canvas {
     width: 100%;
     height: 164px;
   }
-
+  &__shadow {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: transparent;
+    z-index: 3;
+    box-shadow: 80px 0 80px -50px #191b25 inset,
+      -80px 0 80px -50px #191b25 inset;
+  }
   &__controls-container {
     width: 100%;
     display: flex;
@@ -30,6 +44,10 @@
     background-color: #52597a;
     margin: 30px 0;
     position: relative;
+
+    @media screen and (max-width: 1600px) and (min-width: 1040px) and (max-height: 800px) {
+      margin: 20px 0;
+    }
   }
 
   &__audio-track-active {
