--- a/src/component/shared/Footer/Footer.scss
+++ b/src/component/shared/Footer/Footer.scss
@@ -17,10 +17,13 @@
   z-index: 10;
 
   @media screen and (max-width: 1600px) {
-    padding: 40px 120px 55px;
+    padding: 40px 80px 55px;
   }
   @media screen and (max-width: 1024px) {
     padding: 40px 80px 50px;
+  }
+  @media screen and (max-width: 1600px) and (min-width: 1040px) and (max-height: 800px) {
+    padding: 20px 80px 20px;
   }
   @media screen and (max-width: 600px) {
     padding: 25px 27px 55px;
@@ -46,6 +49,9 @@
     &--end {
       &::after {
         display: none;
+      }
+      img {
+        cursor: pointer;
       }
     }
 
