--- a/src/component/shared/Header/Header.scss
+++ b/src/component/shared/Header/Header.scss
@@ -20,10 +20,11 @@
     background: #191b25;
   }
 
-  @media screen and (max-width: 1600px) {
-    padding: 40px 120px 0;
+  &__logo {
+    cursor: pointer;
   }
-  @media screen and (max-width: 1024px) {
+
+  @media screen and (max-width: 1600px) {
     padding: 40px 80px 0;
   }
   @media screen and (max-width: 600px) {
@@ -54,6 +55,7 @@
 
     color: #52597a;
     margin-right: 76.33px;
+
     &:last-of-type {
       margin-right: 0;
     }
@@ -119,10 +121,6 @@
       margin-right: 0;
       @include fontText(normal, 300, 32px, 39px);
       margin-bottom: 56px;
-      //   margin-bottom: 76px;
-      //   &:last-of-type {
-      //     margin-bottom: 0;
-      //   }
     }
   }
 }
