--- a/src/component/shared/PopupInfo/PopupInfo.scss
+++ b/src/component/shared/PopupInfo/PopupInfo.scss
@@ -38,6 +38,16 @@
 
   &__field {
     margin-bottom: 40px;
+
+    &--attention {
+      margin-top: auto;
+      margin-bottom: 0;
+      .popup-info__name {
+        margin-top: 15px;
+        margin-bottom: 0;
+        color: #da4f4f;
+      }
+    }
   }
 
   &__name {
