--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
+  box-sizing: border-box;
 
   @media screen and (max-width: 1600px) {
     padding: 80px 80px 127px;
