--- a/src/component/SongsPage/SongsPage.scss
+++ b/src/component/SongsPage/SongsPage.scss
@@ -122,6 +122,7 @@
     justify-content: center;
     text-align: left;
     position: relative;
+    cursor: pointer;
 
     &--active {
       .songs-page__song-name {
@@ -275,6 +276,26 @@
       span {
         display: inline-block;
       }
+    }
+  }
+
+  &__icon {
+    width: 32px;
+    height: 32px;
+    margin-right: 50px;
+    &:last-of-type {
+      margin-right: 0;
+    }
+
+    &--disabled {
+      pointer-events: none;
+      cursor: not-allowed;
+      text-decoration: none;
+      color: black;
+      display: none;
+      // img {
+      //   filter: grayscale(80%);
+      // }
     }
   }
 
