--- a/src/component/shared/Footer/Footer.scss
+++ b/src/component/shared/Footer/Footer.scss
@@ -29,6 +29,12 @@
     padding: 25px 27px 55px;
   }
 
+  &__link {
+    @media screen and (max-width: 1040px) {
+      display: none;
+    }
+  }
+
   &__icons {
     display: flex;
   }
@@ -36,6 +42,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    // width: 30px;
+    // height: 30px;
     &::after {
       content: '';
       display: block;
@@ -53,6 +61,11 @@
       img {
         cursor: pointer;
       }
+    }
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     &--linktree {
