--- a/src/component/shared/Header/Header.scss
+++ b/src/component/shared/Header/Header.scss
@@ -22,6 +22,10 @@
 
   &__logo {
     cursor: pointer;
+    width: 110px;
+    height: 40px;
+    object-fit: contain;
+    object-position: left;
   }
 
   @media screen and (max-width: 1600px) {
